# coriander-lapack

./: CMakeLists.txt  README.md  install.sh
cmake/: corianderlapack.cmake.in
doc/: README.MD
include/: cusolverDn.h
include/coriander-lapack/: clLapack_source_code.h  cocl_lapack_dn.h
include/coriander-solver/: cocl_solver_dn.h
kernels/: floatPotrfSourceCode.cl
src/: clLapack_source_code.cpp  cocl_lapack_dn.cpp  cocl_solver_dn.cpp
test/: CMakeLists.txt
test/endtoend/: CMakeLists.txt  test_cholesky_factorization.cu  test_constructor.cu
